# CGame

./: CMakeLists.txt  main.c
Objects/Obstacle/: Obstacle.c  Obstacle.h
Objects/Player/: Player.c  Player.h
Utils/Console/Reader/: Reader.c  Reader.h
Utils/Console/Writer/: Writer.c  Writer.h
